--- a/cashup/templates/cashup/set_register_takings.html
+++ b/cashup/templates/cashup/set_register_takings.html
@@ -7,9 +7,10 @@
     <body>
         <h1>{{ register.name }}</h1>
         <p>{% if register.is_open %}Value of {{ number_of_sales }} sale{{ number_of_sales|pluralize }} since {{ register.open_time|date:"g:iA"|lower }} {{ register.open_time|naturalday }}:{% else %}Register closed {{ register.closed_time|date:"g:iA"|lower }} {{ register.closed_time|naturalday }}{% endif %}</p>
-        <ul>
-            <li>Cash: {{ cash_sales }}</li>
-            <li>Card: {{ card_sales }}</li>
-            <li>Total: {{ total_sales }}</li>
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Submit" />
+        </form>
     </body>
 </html>
