--- a/cashup/templates/cashup/select_register.html
+++ b/cashup/templates/cashup/select_register.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>{% load humanize %}{% load staticfiles %}
-<html>
-    <head>
-        <title>Select register</title>
-        <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-    </head>
-    <body>
+{% extends "cashup/register_base.html" %}{% load humanize %}
+{% block title %}Select register{% endblock %}
+{% block body %}
         <p>Registers available:</p>{% if registers %}
         <ul>{% for register in registers %}
             <li><a href="{% url 'set_register_takings' register.id %}">{{ register.name }}</a><p>Open since: {{ register.open_time|naturaltime }}</p></li>{% endfor %}
         </ul>{% else %}
         <p>No open registers</p>{% endif %}
-    </body>
-</html>
+{% endblock %}
