--- a/cashup/templates/cashup/set_register_takings.html
+++ b/cashup/templates/cashup/set_register_takings.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>{% load humanize %}
-<html>
-    <head>
-        <title>Set register takings: {{ register.name }}</title>
-    </head>
-    <body>
-        <h1>{{ register.name }}</h1>
+{% extends "cashup/register_base.html" %}{% load humanize %}
+{% block title %}Set register takings: {{ register.name }}{% endblock %}
+{% block body %}
+    <h1>{{ register.name }}</h1>
         <p>{% if register.is_open %}Value of {{ number_of_sales }} sale{{ number_of_sales|pluralize }} since {{ register.open_time|date:"g:iA"|lower }} {{ register.open_time|naturalday }}:{% else %}Register closed {{ register.closed_time|date:"g:iA"|lower }} {{ register.closed_time|naturalday }}{% endif %}</p>
         <form action="" method="post">
             {% csrf_token %}
             {{ form }}
             <input type="submit" value="Submit" />
         </form>
-    </body>
-</html>
+{% endblock %}
