--- a/cashup/templates/cashup/select_register.html
+++ b/cashup/templates/cashup/select_register.html
@@ -3,7 +3,7 @@
 {% block body %}
         <p>Registers available:</p>{% if registers %}
         <ul>{% for register in registers %}
-            <li><a href="{% url 'set_register_takings' register.id %}">{{ register.name }}</a><p>Open since: {{ register.open_time|naturaltime }}</p></li>{% endfor %}
+            <li><a href="{% url 'set_register_takings' register.id %}">{{ register.name }}</a><p>{{ register.outlet.name }}</p><p>Open since: {{ register.open_time|naturaltime }}</p></li>{% endfor %}
         </ul>{% else %}
         <p>No open registers</p>{% endif %}
 {% endblock %}
