--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,2 +1,33 @@
 {% extends "base.html" %}
 {% block title %}Login | {{ block.super }}{% endblock %}
+{% block content %}
+            <h1>Please log in</h1>
+            {% if next %}
+            <p class="head">You need to log in to see this page.</p>
+            {% endif %}
+            {% if form.errors %}
+            <div class="alert alert-danger">
+                Your username and password didn't match. Please try again.
+            </div>
+            {% endif %}
+            <form class="form-horizontal pt-1" method="post" action="{{ request.get_full_path }}">
+                {% csrf_token %}
+                <div class="form-group row">
+                    <div class="col-sm-6 offset-sm-3">
+                        <input id="{{ form.username.id_for_label }}" class="form-control" maxlength="254" name="{{ form.username.name }}" type="text" value="{{ form.username.value|default:"" }}" placeholder="Username" autofocus required>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-6 offset-sm-3">
+                        <input id="{{ form.password.id_for_label }}" class="form-control" name="{{ form.password.name }}" type="password" placeholder="Password" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 offset-sm-3">
+                        <button class="btn btn-primary btn-block" type="submit">Log in</button>
+                        <p class="text-xs-center pt-1"><a href="{% url 'password_reset' %}">Lost password?</a></p>
+                    </div>
+                </div>
+                <input type="hidden" name="next" value="{{ next }}" />
+            </form>
+        {% endblock %}
